# sample-ai-workflows-in-aws-lambda-durable-functions

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
python/: README.md  pyproject.toml  template.yaml
python/src/: agent.py  durable_strands_agent.py  human_review.py  llm_as_judge.py  parallel_invocation.py  prompt_chaining.py  structured_output.py
python/src/utils/: constants.py  converse.py
python/test/: test_agent.py  test_durable_strands_agent.py  test_human_review.py  test_llm_as_judge.py  test_parallel_invocation.py  test_prompt_chaining.py  test_structured_output.py
typescript/: README.md  package-lock.json  package.json  template.yaml  tsconfig.json  vitest.config.ts
typescript/src/: agent.ts  durable-strands-agent.ts  human-review.ts  llm-as-judge.ts  parallel-invocation.ts  prompt-chaining.ts  structured-output.ts
typescript/src/utils/: constants.ts  converse.ts  logger.ts
typescript/test/: agent.test.ts  durable-strands-agent.test.ts  human-review.test.ts  llm-as-judge.test.ts  parallel-invocation.test.ts  prompt-chaining.test.ts  structured-output.test.ts
